# modcon-drone

./: ;  CMakeLists.txt  README.md  \  sdkconfig
drone_unittest/: CMakeLists.txt  README.md  sdkconfig
drone_unittest/components/mpu6050/: CMakeLists.txt
drone_unittest/components/mpu6050/src/: mpu6050.c  quaternions.c  roll_pitch.c
drone_unittest/main/: CMakeLists.txt  adc.h  espnow_rec.cpp  espnow_rec.h  i2c.cpp  i2c.h  main.cpp  pwm.cpp  uart.h
espnow_broadcaster/: CMakeLists.txt
espnow_broadcaster/main/: main.cpp
main/: CMakeLists.txt  adc.cpp  espnow_rec.cpp  espnow_rec.h  i2c.cpp  i2c.h  idf_component.yml  main.cpp  pwm.cpp  pwm.h  uart.cpp  uart.h
python_scripts/: automatic_controller_script.py
